# rules_tsql

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  Bazel.props  Directory.Build.props  Directory.Build.targets  Directory.Solution.props  Directory.Solution.targets  README.md  ReleaseNotes.md  WORKSPACE  rules_tsql.sln
.ci/: azure-pipelines.yaml  init.sh
dotnet/: repository.bzl
eng/: create_db.sh  e2e.sh  publish.sh  start_server.sh
eng/release/: BUILD.bazel  Program.cs  Util.cs  release.csproj
eng/tar/: BUILD.bazel  FileEditor.cs  Program.cs  tar.csproj
tests/examples/hello_bazel/: BUILD.bazel  Foo.sql
tests/examples/hello_bazel/Foo/: Bar.sql  MakeBar.sql
tests/examples/hello_bazel/foo/: Bar.sql  MakeBar.sql  schema.sql
tests/examples/references/: BUILD  consume.sql  provide.sql  transitive.sql
tests/tools/build_test/: BUILD.bazel  Program.cs  build_test.bzl  build_test.csproj  build_test.sh
tools/: defaults.bzl
tsql/: BUILD.bazel  defs.bzl  deps.bzl  toolchain.bzl
tsql/private/: BUILD.bazel  dacpac.bzl  providers.bzl
tsql/tools/builder/: BUILD.bazel  BUILD.release.bazel  BuildArgs.cs  Builder.cs  Deployer.cs  Extractor.cs  MSBuildEngine.cs  ModelValidationError.cs  Program.cs  SimpleBuilder.cs  TSqlModelExtensions.cs  TaskUtil.cs  builder.bash  builder.bzl  builder.csproj  script.sh
