load("//tsql:defs.bzl", "tsql_dacpac")
load("//tests/tools/build_test:build_test.bzl", "build_test")

tsql_dacpac(
    name = "hello_bazel",
    srcs = glob(["**/*.sql"]),
)

build_test(
    name = "hello_bazel_test",
    expectations = {
        "Element[@Name='[foo]']": {
            "@Type": "SqlSchema",
            "Relationship": {
                "@Name": "Authorizer",
                "Entry/References/@Name": "[dbo]",
            },
        },
        "Element[@Name='[foo].[Bar]']": {
            "@Type": "SqlTable",
            "Relationship[@Name='Columns']": {
                "Entry/Element[@Name='[foo].[Bar].[Id]']": {
                    "@Type": "SqlSimpleColumn",
                    "Property[@Name='IsNullable']": {
                        "@Value": "False",
                    },
                    "Property[@Name='IsIdentity']": {
                        "@Value": "True",
                    },
                    "Relationship/Entry/Element[@Type='SqlTypeSpecifier']/Relationship/Entry/References": {
                        "@Name": "[int]",
                    },
                },
                "Entry/Element[@Name='[foo].[Bar].[Name]']": {
                },
            },
        },
        "Element[@Name='[foo].[MakeBar]']": {
            "@Type": "SqlProcedure",
            "Property[@Name='BodyScript']": {},
            "Relationship[@Name='BodyDependencies']": {
                "Entry/References[@Name='[foo].[Bar]']": {},
                "Entry/References[@Name='[foo].[Bar].[Name]']": {},
            },
        },
    },
)
