load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "builder",
    srcs = [
        "Builder.cs",
        "ModelValidationError.cs",
        "Program.cs",
        "TSqlModelExtensions.cs",
    ],
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "@nuget//CommandLineParser",
        "@nuget//Microsoft.SqlServer.DacFx",
        "@nuget//RulesMSBuild.Runfiles",
    ],
)
