load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

exports_files(["script.sh"])

msbuild_binary(
    name = "builder",
    srcs = [
        "Builder.cs",
        "Extractor.cs",
        "MSBuildEngine.cs",
        "ModelValidationError.cs",
        "Program.cs",
        "SimpleBuilder.cs",
        "TSqlModelExtensions.cs",
    ],
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "@nuget//CommandLineParser",
        "@nuget//Microsoft.Build.Utilities.Core",
        "@nuget//Microsoft.SqlServer.DacFx",
        "@nuget//RulesMSBuild.Runfiles",
    ],
)
