load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

exports_files(["script.sh"])

msbuild_binary(
    name = "builder",
    srcs = [
        "BuildArgs.cs",
        "Builder.cs",
        "Deployer.cs",
        "Extractor.cs",
        "MSBuildEngine.cs",
        "Program.cs",
        "TaskUtil.cs",
    ],
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "@nuget//CommandLineParser",
        "@nuget//Microsoft.Build.Utilities.Core",
        "@nuget//Microsoft.SqlServer.DacFx",
        "@nuget//RulesMSBuild.Runfiles",
    ],
)

alias(
    name = "builder_tool",
    actual = ":builder",
    visibility = ["//visibility:public"],
)
