load(":builder.bzl", "builder")

package(default_visibility = ["//visibility:public"])

exports_files(["script.sh"])

filegroup(
    name = "prebuilt_builder",
    srcs = [
        "@@prebuilt_files@@",
    ],
)

builder(
    name = "builder_publish",
    files = ":prebuilt_builder",
    launcher = "builder.bash",
)
